ST-14921 Fixed cross btn overlapping in multi options SelectDropdown

--- a/src/components/SelectDropdown/SelectDropdown.css
+++ b/src/components/SelectDropdown/SelectDropdown.css
@@ -79,6 +79,10 @@
   line-height: 16px;
 }
 
+.Select--canClear .Select-control {
+  padding-right: 20px;
+}
+
 .Select.is-focused {
   border-color: #d8d8d8;
   transition: 0.3s ease-out 0s;
